...
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="Y-Care" />

        </com.google.android.material.appbar.AppBarLayout>

        <fragment
            android:id="@+id/fragment_container"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:defaultNavHost="true"
            app:navGraph="@navigation/navigation" />
...
