...
            app:menu="@menu/menu_toolbar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="Y-care" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/Registrazione"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registrazione"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
...
